# chord-engine

./: .gitignore  CMakeLists.txt  README.md
assets/: FFMPEG Helper commands.txt  primitives.glb
shaders/: batch_color_mesh.vert  brdf_lut.frag  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  effect_mesh.frag  effect_mesh.vert  fullscreen_triangle.vert  irradiance.frag  line.frag  line.vert  prefilter.frag  prefilter.vert  selection_mask.frag  selection_mask.vert  selection_outline.frag  shadow_depth.vert  skybox.frag  skybox.vert
src/editor/: AssetViewer.cpp  AssetViewer.h  CMakeLists.txt  Editor.cpp  EditorUiManager.cpp  EditorUiManager.h  EntityViewer.cpp  EntityViewer.h  RegistryViewer.cpp  RegistryViewer.h  ViewerComponentUi.cpp  ViewerComponentUi.h
src/engine/: AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  Camera.h  CameraSystem.cpp  CameraSystem.h  Core.cpp  Core.h  CoreBuffers.cpp  CoreDescriptors.cpp  CoreGltfLoader.cpp  CoreIBL.cpp  CoreImages.cpp  CoreInitializer.cpp  CoreMeshUtils.cpp  CorePipelines.cpp  CoreSwapchain.cpp  EcsDebugger.cpp  EcsDebugger.h  EditorImGuiTheme.cpp  EditorImGuiTheme.h  EditorSelection.h  EntityState.h  GravityComponents.h  GravitySimulationSystem.cpp  GravitySimulationSystem.h  HierarchyComponent.h  HierarchySystem.cpp  HierarchySystem.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiWindowRegistry.cpp  ImGuiWindowRegistry.h  InputSystem.cpp  InputSystem.h  LineComponent.h  Log.h  MeshComponent.h  NameComponent.cpp  NameComponent.h  (+16 more)
src/simulation/: Simulation.cpp  Simulation.h
